<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Marcos Navarro</string>
    <string name="enunciation">Overlay layouts</string>
    <string name="action_settings">Settings</string>
    <string name="title_search">Search</string>
    <string name="title_layout_hide">This layout is hidden when you do a search.</string>
    <string name="lorem_ipsum">Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.</string>
    <string name="no_result">No result</string>

</resources>
